sumo/tests/jtrrouter/errors/false_net/options.jtrrouter
--net-file=input/net.net.xml --flows=input_flows.flows.xml -o routes.rou.xml
